--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,27 @@
-.App {
-  text-align: center;
+html, body, #root{
+  height: 100%;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background: #353535;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.wrapper {
+  height: 100%;
+  width: 100%;
+  align-items: stretch;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+nav.sidebar {
+  min-width: 250px;
+  max-width: 250px;
+  background: rgb(45, 45, 45);
+  height: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+nav.drag-bar {
+  -webkit-app-region: drag;
+  height: 100px;
+  width: 100%;
 }
